docs/_site/results/run1/openmpi/logs/openmpi-1.0.2-pkgconf-experiment.err
/var/spool/slurmd/job97902/slurm_script: line 12: 38929 Killed                  spliced splice --package openmpi@1.0.2 --splice pkgconf --runner spack --replace pkgconf --experiment experiment --outfile /p/vast1/build/spliced-experiment/results/openmpi/1.0.2/pkgconf/experiment.json
==> Error: ProcessError: Command exited with status 2:
    'make' '-j16' 'V=1'

6 errors found in build log:
     2287    then mv -f "$depbase.Tpo" "$depbase.Plo"; else rm -f "$depbase.Tpo
             "; exit 1; fi
     2288    mkdir .libs
     2289    mkdir .libs
     2290    mkdir: cannot create directory '.libs': File exists
     2291     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I
             /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0.2-n5hjqkzchn6
             psbaba72danviqppszjmj/spack-src/opal/mca/memory/malloc_hooks -I../
             ../../../include -I../../../../include -I/var/tmp/sochat1/spack-st
             age/spack-stage-openmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spa
             ck-src/include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-
             1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src -I../../../.. -I.
             ./../../../include -I/var/tmp/sochat1/spack-stage/spack-stage-open
             mpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/opal -I/var/t
             mp/sochat1/spack-stage/spack-stage-openmpi-1.0.2-n5hjqkzchn6psbaba
             72danviqppszjmj/spack-src/orte -I/var/tmp/sochat1/spack-stage/spac
             k-stage-openmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/o
             mpi -O3 -DNDEBUG -fno-strict-aliasing -pthread -MT memory_malloc_h
             ooks_component.lo -MD -MP -MF .deps/memory_malloc_hooks_component.
             Tpo -c memory_malloc_hooks_component.c  -fPIC -DPIC -o .libs/memor
             y_malloc_hooks_component.o
     2292     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I
             /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0.2-n5hjqkzchn6
             psbaba72danviqppszjmj/spack-src/opal/mca/memory/malloc_hooks -I../
             ../../../include -I../../../../include -I/var/tmp/sochat1/spack-st
             age/spack-stage-openmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spa
             ck-src/include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-
             1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src -I../../../.. -I.
             ./../../../include -I/var/tmp/sochat1/spack-stage/spack-stage-open
             mpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/opal -I/var/t
             mp/sochat1/spack-stage/spack-stage-openmpi-1.0.2-n5hjqkzchn6psbaba
             72danviqppszjmj/spack-src/orte -I/var/tmp/sochat1/spack-stage/spac
             k-stage-openmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/o
             mpi -O3 -DNDEBUG -fno-strict-aliasing -pthread -MT memory_malloc_h
             ooks.lo -MD -MP -MF .deps/memory_malloc_hooks.Tpo -c memory_malloc
             _hooks.c  -fPIC -DPIC -o .libs/memory_malloc_hooks.o
  >> 2293    memory_malloc_hooks.c:34:8: error: conflicting type qualifiers for
              '__malloc_initialize_hook'
     2294       34 | void (*__malloc_initialize_hook) (void) = opal_memory_mall
             oc_hooks_init;
     2295          |        ^~~~~~~~~~~~~~~~~~~~~~~~
     2296    In file included from memory_malloc_hooks.c:24:
     2297    /usr/include/malloc.h:169:38: note: previous declaration of '__mal
             loc_initialize_hook' was here
     2298      169 | extern void (*__MALLOC_HOOK_VOLATILE __malloc_initialize_h
             ook) (void)
     2299          |                                      ^~~~~~~~~~~~~~~~~~~~~
             ~~~

     ...

     2367       98 |     __realloc_hook = opal_mem_free_realloc_hook;
     2368          |     ^~~~~~~~~~~~~~
     2369    In file included from memory_malloc_hooks.c:24:
     2370    /usr/include/malloc.h:178:39: note: declared here
     2371      178 | extern void *(*__MALLOC_HOOK_VOLATILE __realloc_hook) (voi
             d *__ptr,
     2372          |                                       ^~~~~~~~~~~~~~
  >> 2373    make[4]: *** [memory_malloc_hooks.lo] Error 1
     2374    make[4]: *** Waiting for unfinished jobs....
     2375     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I
             /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0.2-n5hjqkzchn6
             psbaba72danviqppszjmj/spack-src/opal/mca/memory/malloc_hooks -I../
             ../../../include -I../../../../include -I/var/tmp/sochat1/spack-st
             age/spack-stage-openmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spa
             ck-src/include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-
             1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src -I../../../.. -I.
             ./../../../include -I/var/tmp/sochat1/spack-stage/spack-stage-open
             mpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/opal -I/var/t
             mp/sochat1/spack-stage/spack-stage-openmpi-1.0.2-n5hjqkzchn6psbaba
             72danviqppszjmj/spack-src/orte -I/var/tmp/sochat1/spack-stage/spac
             k-stage-openmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/o
             mpi -O3 -DNDEBUG -fno-strict-aliasing -pthread -MT memory_malloc_h
             ooks_component.lo -MD -MP -MF .deps/memory_malloc_hooks_component.
             Tpo -c memory_malloc_hooks_component.c -o memory_malloc_hooks_comp
             onent.o >/dev/null 2>&1
     2376    make[4]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-o
             penmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/opal/mca/m
             emory/malloc_hooks'
  >> 2377    make[3]: *** [all-recursive] Error 1
     2378    make[3]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-o
             penmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/opal/mca/m
             emory'
  >> 2379    make[2]: *** [all-recursive] Error 1
     2380    make[2]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-o
             penmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/opal/mca'
  >> 2381    make[1]: *** [all-recursive] Error 1
     2382    make[1]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-o
             penmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-src/opal'
  >> 2383    make: *** [all-recursive] Error 1

See build log for details:
  /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0.2-n5hjqkzchn6psbaba72danviqppszjmj/spack-build-out.txt

Making predictions for spack-test
Making predictions for symbolator
Making predictions for libabigail
abicompat not found on path, will look for spack instead.
Making predictions for actual
